feat: header e banner fatti

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </div>
     <!-- /header -->
     <!-- banner -->
-     <div class="banner">
-        <div class="bannerraw container">
-            <div class="bannercol1"></div>
-            <div class="bannercol"></div>
-
-        </div>
-     </div>
+    <div class="banner">
+            <div class="bannerraw container">
+                <div class="bannertitle">aaaaaaaa</div>
+                <div class="bannercol1"></div>
+                <div class="bannercol2"></div>
+    </div>
+    </div>
     <!-- /banner -->
     <!-- cardsection -->
     <!-- /cardsection -->
