feat: card section fatta

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
     </div>
     <!-- /banner -->
     <!-- cardsection -->
+     <div class="cardsection smallcontainer">
+        <div class="cardraw">
+            <!-- colonna titolo e selettori -->
+            <div class="cardtitle"></div>
+            <!-- /colonna titolo e selettori -->
+             <!-- colonne centrali -->
+            <div class="cardcol"></div>
+            <div class="cardcol"></div>
+            <div class="cardcol"></div>
+            <!-- /colonne centrali -->
+            <!-- colonna finale -->
+            <div class="cardfooter"></div>
+            <!-- /colonna finale -->
+        </div>
+     </div>
     <!-- /cardsection -->
     <!-- midsection -->
     <!-- /midsection -->
