feat: griglia drop fatta

--- a/index.html
+++ b/index.html
@@ -55,8 +55,25 @@
      </div>
     <!-- /cardsection -->
     <!-- midsection -->
+     <div class="midsection smallcontainer">
+        <div class="midraw">
+            <div class="midcol1"></div>
+            <div class="midcol2"></div>
+        </div>
+     </div>
     <!-- /midsection -->
-    <!-- cardsection -->
+    <!-- Dropsection -->
+     <div class="dropsection smallcontainer">
+        <div class="dropdraw">
+            <div class="dropcoltitle"></div>
+            <div class="dropcol"></div>
+            <div class="dropcol"></div>
+            <div class="dropcol"></div>
+            <div class="dropcol"></div>
+            <div class="dropcol"></div>
+            <div class="dropcol"></div>
+        </div>
+     </div>
     <!-- /cardsection -->
     <!-- footer -->
     <!-- /footer -->
