feat:struttura a blocchi finita

--- a/index.html
+++ b/index.html
@@ -75,7 +75,28 @@
         </div>
      </div>
     <!-- /cardsection -->
+     <!-- finalsection -->
+      <div class="finalsection smallcontainer">
+        <div class="finaltitle"></div>
+        <div class="finaltag"></div>
+      </div>
+      <!-- /finalsection -->
     <!-- footer -->
+     <div class="footersection">
+
+        <div class="smallcontainer" >
+            <div class="footerraw">
+                <div class="footercol"></div>
+                <div class="footercol"></div>
+                <div class="footercol"></div>
+                <div class="footercol"></div>
+                <div class="footercol"></div>
+            </div>
+            <div class="footerlenguages"></div>
+    
+         </div>
+        </div>
+
     <!-- /footer -->
 
 </body>
