feat:inseiti alcuni margin

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- /banner -->
     <!-- cardsection -->
      <div class="cardsection smallcontainer">
-        <div class="cardraw">
+        <div class="cardraw mt-20">
             <!-- colonna titolo e selettori -->
             <div class="cardtitle"></div>
             <!-- /colonna titolo e selettori -->
@@ -56,7 +56,7 @@
     <!-- /cardsection -->
     <!-- midsection -->
      <div class="midsection smallcontainer">
-        <div class="midraw">
+        <div class="midraw mt-20">
             <div class="midcol1"></div>
             <div class="midcol2"></div>
         </div>
@@ -64,7 +64,7 @@
     <!-- /midsection -->
     <!-- Dropsection -->
      <div class="dropsection smallcontainer">
-        <div class="dropdraw">
+        <div class="dropdraw mt-20">
             <div class="dropcoltitle"></div>
             <div class="dropcol"></div>
             <div class="dropcol"></div>
@@ -77,7 +77,7 @@
     <!-- /cardsection -->
      <!-- finalsection -->
       <div class="finalsection smallcontainer">
-        <div class="finaltitle"></div>
+        <div class="finaltitle mt-20"></div>
         <div class="finaltag"></div>
       </div>
       <!-- /finalsection -->
@@ -85,7 +85,7 @@
      <div class="footersection">
 
         <div class="smallcontainer" >
-            <div class="footerraw">
+            <div class="footerraw mt-20">
                 <div class="footercol"></div>
                 <div class="footercol"></div>
                 <div class="footercol"></div>
