feat:header e banner fatti

--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
 <body>
     <!-- header -->
     <div class="header">
         <!-- lista iniziale -->
+         
         <ul class="list1">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="">Perchè Dropbox</a></li>
+            <li><a href="">Funzioni</a></li>
+            <li><a href="">Piani e Prezzi</a></li>
         </ul>
         <!-- /lista iniziale -->
         <!-- lista finale -->
         <ul class="list2">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="">Supporto</a></li>
+            <li><a href="">Contatta l'ufficio vendite</a></li>
+            <li><a href="">Accedi</a></li>
+            <li><a class="small-button" href="">inizia</a></li>
         </ul>
         <!-- /lista finale -->
     </div>
@@ -31,9 +33,14 @@
     <!-- banner -->
     <div class="banner">
             <div class="bannerraw container">
-                <div class="bannertitle">aaaaaaaa</div>
-                <div class="bannercol1"></div>
-                <div class="bannercol2"></div>
+                <div class="bannertitle"><h1>Tutto ciò che ti serve per il lavoro, 
+                    in un unico posto</h1></div>
+                <div class="bannercol1"><p>Finalmente tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
+                    <div ><a class="button mt-20 href="">Inizia la prova gratuita</a></div>
+                <p class="mt-20">Annulla in qualsiasi momento</p>
+            <p class="mt-20"><i class="fa-solid fa-arrow-down"></i></p></div>
+                
+                <div class="bannercol2"><img src="./img/jumbo.png" alt=""></div>
     </div>
     </div>
     <!-- /banner -->
@@ -74,7 +81,7 @@
             <div class="dropcol"></div>
         </div>
      </div>
-    <!-- /cardsection -->
+    <!-- /dropsection -->
      <!-- finalsection -->
       <div class="finalsection smallcontainer">
         <div class="finaltitle mt-20"></div>
