feat:esercizio base finito

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!-- lista iniziale -->
 
         <ul class="list1">
+            <li><img src="./img/logo-small.png" alt=""></li>
             <li><a href="">Perchè Dropbox</a></li>
             <li><a href="">Funzioni</a></li>
             <li><a href="">Piani e Prezzi</a></li>
@@ -46,7 +47,7 @@
                         <p class="mt-20"><i class="fa-solid fa-arrow-down"></i></p>
                 </div>
 
-                <div class="bannercol2"><img src="./img/jumbo.png" alt=""></div>
+                <div class="bannercol2 "><img src="./img/jumbo.png" alt=""></div>
             </div>
         </div>
         <!-- /banner -->
@@ -320,7 +321,8 @@
     <!-- finalsection -->
     <div class="finalsection smallcontainer">
         <div class="finaltitle mt-20">
-            <h3>più di 500.000 Team utilizzano Dropbox Business</h3>
+            <h3>più di 500.000 Team utilizzano </h3>
+            <h3>Dropbox Business</h3>
         </div>
         <div class="buynow"><a href="">Scopri di più sui nostri contenuti</a></div>
     </div>
