feat: lavoro finito

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                 professionisti nella gestione su qualsiasi scala.</div>
                         </div>
                         <div class="cardfooter-right">
-                            <div class="button">Contatta l'ufficio vendite</div>
+                            <div class="button"><a href="">Contatta l'ufficio vendite</a></div>
                         </div>
                     </div>
                 </div>
